# simple-rtsp-client

./: CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  rtsp-client.cpp  rtsp-client.h  rtsp_client.cpp  rtsp_client.h  rtsp_common.cpp  rtsp_common.h  sdp.cpp  sdp.h  socket_io.cpp
rtp/: aacdemuxer.cpp  aacdemuxer.h  h264demuxer.cpp  h264demuxer.h  h265demuxer.cpp  h265demuxer.h  pcmademuxer.cpp  pcmademuxer.h  rtpdemuxer.h
